@@ -55,6 +55,12 @@
   :group 'haskell-interactive
   :type '(choice string (repeat string)))
 
+(defcustom haskell-process-path-cabal
+  "cabal"
+  "Path to the `cabal' executable."
+  :group 'haskell-interactive
+  :type '(choice string (repeat string)))
+
 (defcustom haskell-process-path-cabal-ghci
   "cabal-ghci"
   "The path for starting cabal-ghci."
@@ -73,10 +79,22 @@
   :group 'haskell-interactive
   :type '(choice list))
 
+(defcustom haskell-process-args-cabal-repl
+  '("--ghc-option=-ferror-spans")
+  "Additional arguments to for `cabal repl' invocation.
+Note: The settings in `haskell-process-path-ghci' and
+`haskell-process-args-ghci' are not automatically reused as `cabal repl'
+currently invokes `ghc --interactive'. Use
+`--with-ghc=<path-to-executable>' if you want to use a different
+interactive GHC frontend; use `--ghc-option=<ghc-argument>' to
+pass additional flags to `ghc'."
+  :group 'haskell-interactive
+  :type '(repeat (string :tag "Argument")))
+
 (defcustom haskell-process-type
   'ghci
   "The inferior Haskell process type to use."
-  :type '(choice (const ghci) (const cabal-dev) (const cabal-ghci))
+  :type '(choice (const ghci) (const cabal-repl) (const cabal-dev) (const cabal-ghci))
   :group 'haskell-interactive)
 
 (defcustom haskell-process-log
@@ -392,13 +410,14 @@ for various things, but is optional."
   "Add <cabal-project-dir>/dist/build/autogen/ to the ghci search
 path. This allows modules such as 'Path_...', generated by cabal,
 to be loaded by ghci."
-  (let*
-      ((session       (haskell-session))
-       (cabal-dir     (haskell-session-cabal-dir session))
-       (ghci-gen-dir  (format "%sdist/build/autogen/" cabal-dir)))
-    (haskell-process-queue-without-filters
-     (haskell-process)
-     (format ":set -i%s" ghci-gen-dir))))
+  (unless (eq 'cabal-repl haskell-process-type) ;; redundant with "cabal repl"
+    (let*
+        ((session       (haskell-session))
+         (cabal-dir     (haskell-session-cabal-dir session))
+         (ghci-gen-dir  (format "%sdist/build/autogen/" cabal-dir)))
+      (haskell-process-queue-without-filters
+       (haskell-process)
+       (format ":set -i%s" ghci-gen-dir)))))
 
 (defun haskell-process-do-cabal (command)
   "Run a Cabal command."
@@ -417,6 +436,7 @@ to be loaded by ghci."
                  (format "%s %s"
                          (ecase haskell-process-type
                            ('ghci "cabal")
+                           ('cabal-repl "cabal")
                            ('cabal-ghci "cabal")
                            ('cabal-dev "cabal-dev"))
                          (caddr state)))))
@@ -451,6 +471,7 @@ to be loaded by ghci."
                :body msg
                :app-name (ecase haskell-process-type
                            ('ghci "cabal")
+                           ('cabal-repl "cabal")
                            ('cabal-ghci "cabal")
                            ('cabal-dev "cabal-dev"))
                :app-icon haskell-process-logo
@@ -689,6 +710,15 @@ from `module-buffer'."
                                nil
                                haskell-process-path-ghci)
                          haskell-process-args-ghci)))
+         ('cabal-repl
+          (haskell-process-log (format "Starting inferior `cabal repl' process using %s ..."
+                                       haskell-process-path-cabal))
+
+          (apply #'start-process
+                 (append (list (haskell-session-name session)
+                               nil
+                               haskell-process-path-cabal)
+                         '("repl") haskell-process-args-cabal-repl)))
          ('cabal-ghci
           (haskell-process-log (format "Starting inferior cabal-ghci process using %s ..."
                                        haskell-process-path-cabal-ghci))
@@ -710,9 +740,10 @@ from `module-buffer'."
     (progn (set-process-sentinel (haskell-process-process process) 'haskell-process-sentinel)
            (set-process-filter (haskell-process-process process) 'haskell-process-filter))
     (haskell-process-send-startup process)
-    (haskell-process-change-dir session
-                                process
-                                (haskell-session-current-dir session))
+    (unless (eq 'cabal-repl haskell-process-type) ;; "cabal repl" sets the proper CWD
+      (haskell-process-change-dir session
+                                  process
+                                  (haskell-session-current-dir session)))
     (haskell-process-set process 'command-queue
                          (append (haskell-process-get (haskell-session-process session)
                                                       'command-queue)
